* Tunnel Testing:       - Fix counting so it really takes 4 consecutive failures         rather than 4 total to remove a tunnel       - Credit or blame goes to the exploratory tunnel as well         as the tunnel being tested       - Adjust tunnel test timeout based on tunnel length     * ExploratoryPeerSelector: Tweak logging     * ProfileOrganizer: Adjust integration calculation again     * build.xml: Add to help     * checklist.txt: Tweak     * readme.html: Fix forum links     * netDb: Remove tunnel.testFailedTime
Monotone-Parent: e3e30df332c3b9babb3b425cd27a09ffe189d0ba
Monotone-Revision: 5a10a952915352111b9da58bb3354f3871655b5e

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-03-22T13:07:38
Monotone-Branch: i2p.i2p

--- a/readme.html
+++ b/readme.html
@@ -9,7 +9,7 @@ you can:</p>
      <ul>
          <li><a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a> and
              <a href="http://perv.i2p/stats.cgi">perv.i2p</a>: sites tracking active eepsites</li>
-         <li><a href="http://forum.i2p/">forum.i2p</a>: a secure and anonymous connection to <a href="http://forum.i2p.net/">forum.i2p.net</a></li>
+         <li><a href="http://forum.i2p/">forum.i2p</a>: a secure and anonymous connection to <a href="http://forum.i2p2.de/">forum.i2p2.de</a></li>
          <li><a href="http://www.i2p2.i2p/">www.i2p2.i2p</a> and mirror <a href="http://i2p-projekt.i2p">i2p-projekt.i2p</a>:
               secure and anonymous connections to <a href="http://www.i2p2.de/">www.i2p2.de</a></li>
          <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: an anonymously hosted search engine of eepsites</li>
@@ -59,7 +59,7 @@ If you cannot see any eepsites at all (even <a href="http://www.i2p2.i2p/">www.i
 be sure your browser proxy is set to localhost port 4444.
 You may also want to review the information on the 
 <a href="http://www.i2p2.i2p/">I2P website</a>, post up messages to the 
-<a href="http://forum.i2p.net/">I2P discussion forum</a>, or swing by #i2p or
+<a href="http://forum.i2p2.de/">I2P discussion forum</a>, or swing by #i2p or
 #i2p-chat on IRC at <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.postman.i2p or irc.freshcoffee.i2p (they're linked together).</p>
 
 <p><b>As a note, you can change this page by editing the file "docs/readme.html"</b></p>
