added i2jump.i2p as jump-site
Monotone-Parent: 4f675bac668e9dd3fcf2abc87543b7aacc994602
Monotone-Revision: e61f64c85cf800e1c1fa1542049b7a1e4a82de6d

Monotone-Author: dev@welterde.de
Monotone-Date: 2008-05-06T19:44:35
Monotone-Branch: i2p.i2p

--- a/installer/resources/eepsite_index.html
+++ b/installer/resources/eepsite_index.html
@@ -70,6 +70,7 @@
      and add a couple of these -
      <a href="http://tino.i2p/hosts.txt">http://tino.i2p/hosts.txt</a>,
      <a href="http://stats.i2p/cgi-bin/newhosts.txt">http://stats.i2p/cgi-bin/newhosts.txt</a>,
+     <a href="http://i2jump.i2p/hosts.txt">http://i2jump.i2p/hosts.txt</a>,
      <a href="http://trevorreznik.i2p/hosts.txt">http://trevorreznik.i2p/hosts.txt</a> and hit "Save".
      Now you will get updates too!
  <li>If you are in a hurry and can't wait a few hours, you can tell people to use a "jump" address helper redirection service.
