--- a/installer/resources/eepsite_index.html
+++ b/installer/resources/eepsite_index.html
@@ -55,9 +55,7 @@
      such as <a href="http://stats.i2p/">stats.i2p</a>.
      That is, you must enter
      your eepsite name and key into a web interface on one or more of these sites.
-     Here is <a href="http://stats.i2p/i2p/addkey.html">the key entry form at stats.i2p</a>,
-     and
-     here is <a href="http://trevorreznik.i2p/host-database/">the key entry form at trevorreznik.i2p</a>.
+     Here is <a href="http://stats.i2p/i2p/addkey.html">the key entry form at stats.i2p</a>.
      Again, your key is the entire "Local destination" key on the
      <a href="http://localhost:7657/i2ptunnel/edit.jsp?tunnel=3">eepsite i2ptunnel configuration page</a>.
      Be sure you get the whole thing, ending with "AAAA".
@@ -70,14 +68,15 @@
      and add a couple of these -
      <a href="http://tino.i2p/hosts.txt">http://tino.i2p/hosts.txt</a>,
      <a href="http://stats.i2p/cgi-bin/newhosts.txt">http://stats.i2p/cgi-bin/newhosts.txt</a>,
-     <a href="http://i2jump.i2p/hosts.txt">http://i2jump.i2p/hosts.txt</a>,
-     <a href="http://trevorreznik.i2p/hosts.txt">http://trevorreznik.i2p/hosts.txt</a> and hit "Save".
+     <a href="http://i2host.i2p/cgi-bin/i2hostetag">http://i2host.i2p/cgi-bin/i2hostetag</a>,
+     and hit "Save".
      Now you will get updates too!
  <li>If you are in a hurry and can't wait a few hours, you can tell people to use a "jump" address helper redirection service.
-     This will work within a few minutes of your entering the key to an address book.
+     This will work within a few minutes of your entering the key to an address book on the same site.
      Test it yourself first by entering
      http://stats.i2p/cgi-bin/jump.cgi?a=<i>something</i>.i2p or
-     or http://trevorreznik.i2p/cgi-bin/jump.php?hostname=<i>something</i>.i2p into your browser.
+     or http://i2host.i2p/cgi-bin/i2hostjump?<i>something</i>.i2p
+     into your browser.
      Once it's working, then you can tell others to use it.
  <li>Some people check eepsite lists such as
      <a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p/status.php</a> for new eepsites, so you may start getting
