* Router console: Flag placeholder pages as noncacheable
Monotone-Parent: a6d5168d7801bdc08a907bd6976cff51a35f1053
Monotone-Revision: 7695d093fa369ca6d42672b36f268bb398fdc447

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-07-07T14:10:10
Monotone-Branch: i2p.i2p

--- a/apps/routerconsole/jsp/i2psnark/index.html
+++ b/apps/routerconsole/jsp/i2psnark/index.html
@@ -1,4 +1,7 @@
-<html><head><title>I2PSnark Disabled</title></head>
+<html><head><title>I2PSnark Disabled</title>
+<meta http-equiv="cache-control" content="no-cache" />
+<meta http-equiv="pragma" content="no-cache" />
+</head>
 <body>
 I2PSnark is not running. Go to <a href="/configclients.jsp">the config clients page</a>
 to start it.
