--- a/readme.html
+++ b/readme.html
@@ -1,3 +1,4 @@
+<p align=right><font size="-1">English | <a href="/index.jsp?lang=de">Deutsch</a></font></p>
 <p>If you've just started I2P, the Active: numbers on the left should start to
 grow over the next few minutes and you'll see a "shared clients" local destination listed
 on the left (if not, <a href="#trouble">see below</a>).  Once those show up,
