--- a/readme_de.html
+++ b/readme_de.html
@@ -7,8 +7,8 @@
          <li><a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a> und
              <a href="http://perv.i2p/stats.cgi">perv.i2p</a>: Webseiten, die aktive Eepsites beobachten</li>
          <li><a href="http://forum.i2p/">forum.i2p</a>: Eine sichere und anonyme Verbindung zu <a href="http://forum.i2p2.de/">forum.i2p2.de</a></li>
-         <li><a href="http://www.i2p2.i2p/">www.i2p2.i2p</a> und der Spiegel <a href="http://i2p-projekt.i2p">i2p-projekt.i2p</a>:
-              Sichere und anonyme Verbindung zu <a href="http://www.i2p2.de/">www.i2p2.de</a></li>
+         <li><a href="http://www.i2p2.i2p/index_de.html">www.i2p2.i2p</a> und der Spiegel <a href="http://i2p-projekt.i2p/index_de.html">i2p-projekt.i2p</a>:
+              Sichere und anonyme Verbindung zu <a href="http://www.i2p2.de/index_de.html">www.i2p2.de</a></li>
          <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: Eine anonym gehostete Suchseite f&uuml;r Eepsites</li>
          <li><a href="http://ugha.i2p/">ugha.i2p</a>: Ugha's Eepsite, ein &ouml;ffentliches Wiki mit vielen Links</li>
          <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: Freenet proxy</li>
@@ -60,10 +60,10 @@
   aufzeigt, solltest Du Port 8887 auf Deiner Firewall &ouml;ffnen um 
   f&uuml;r bessere Verbindung zu sorgen.
   Wenn Du gar keine Eepsites bekommst (auch nicht 
-  <a href="http://www.i2p2.i2p/">www.i2p2.i2p</a>), stelle sicher, dass Dein 
+  <a href="http://www.i2p2.i2p/index_de.html">www.i2p2.i2p</a>), stelle sicher, dass Dein 
   Internet Browser auf den Proxy localhost Port 4444 eingestellt ist.
   Vielleicht m&ouml;chtest Du auch die Informationen lesen, die auf der 
-  <a href="http://www.i2p2.i2p/">I2P website</a> sind, Nachrichten lesen und 
+  <a href="http://www.i2p2.i2p/index_de.html">I2P website</a> sind, Nachrichten lesen und 
   ins <a href="http://forum.i2p2.de/">I2P discussion forum</a> posten, oder 
   chatten auf #i2p or #i2p-chat beim IRC auf 
   <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.postman.i2p 
