--- a/readme_de.html
+++ b/readme_de.html
@@ -1,4 +1,4 @@
-<p align=right><font size="-1"><a href="/index.jsp?lang=en">English</a> | Deutsch | <a href="/index.jsp?lang=nl">Nederlands</a></font></p>
+<p align=right><font size="-1"><a href="/index.jsp?lang=en">English</a> | Deutsch | <a href="/index.jsp?lang=nl">Nederlands</a> | <a href="/index.jsp?lang=sv">Svenska</a></font></p>
 <p>Wenn Du gerade I2P gestartet hast, sollten die "Active:" Zahlen links in den n&auml;chsten paar Minuten anwachsen und Du siehst dann dort ein "shared clients" lokales Ziel gelistet (falls nicht, <a href="#trouble">siehe Unten</a>). Sobald das erscheint, kannst Du:</p>
 <ul>
  <li><b>"Eepsites" besuchen</b> - In I2P sind anonym gehostete Websites - 
@@ -37,7 +37,7 @@
  <li>und Vieles mehr</li>
 </ul>
 
-<h2>Willst Du Deine eigene Epsite?</h2>
+<h2>Willst Du Deine eigene Eepsite?</h2>
 
 <p>Wir bringen Software mit, damit Du Deine eigene Eepsite laufen lassen kannst 
    - Eine 
