UTF-8 readme_sv.html
Monotone-Parent: b891972876a266f48642d944d0608c4a57a65424
Monotone-Revision: fb08b288a3378e045dfef7ff2e6c2b7822319b76

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-10-21T17:45:19
Monotone-Branch: i2p.i2p

--- a/readme_sv.html
+++ b/readme_sv.html
@@ -1,61 +1,61 @@
 <p align=right><font size="-1"><a href="/index.jsp?lang=en">English</a> | <a href="/index.jsp?lang=de">Deutsch</a> | <a href="/index.jsp?lang=nl">Nederlands</a> | Svenska</font></p>
-<p>Om du just har startat I2P kommer de "Aktiva: #" börja öka inom några få minuter och du kommer se en destination kallad "delade klienter" på den vänstra listan (om inte <a href="#trouble">se nedan</a>). När de syns kan du:</p>
+<p>Om du just har startat I2P kommer de "Aktiva: #/#" bÃ¶rja Ã¶ka inom nÃ¥gra fÃ¥ minuter och du kommer se en destination kallad "delade klienter" pÃ¥ den vÃ¤nstra listan (om inte <a href="#trouble">se nedan</a>). NÃ¤r de syns kan du:</p>
 <ul>
- <li><b>surfa "eepsidor"</b> - inom I2P finns det anonyma sajter - 
-     ställ in din webbläsare till att använda <b>HTTP proxy vid localhost port 4444</b>, surfa sen till en eepsida - 
+ <li><b>surfa pÃ¥ "eepsidor"</b> - inom I2P finns det anonyma sajter - 
+     stÃ¤ll in din webblÃ¤sare till att anvÃ¤nda <b>HTTP proxy vid localhost port 4444</b>, surfa sen till en eepsida - 
      <ul>
          <li><a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a> och
-             <a href="http://perv.i2p/stats.cgi">perv.i2p</a>: för statistic över aktiva eepsidor</li>
-         <li><a href="http://forum.i2p/">forum.i2p</a>: en anonym och säker anslutning till <a href="http://forum.i2p2.de/">forum.i2p2.de</a></li>
+             <a href="http://perv.i2p/stats.cgi">perv.i2p</a>: fÃ¶r statistic Ã¶ver aktiva eepsidor</li>
+         <li><a href="http://forum.i2p/">forum.i2p</a>: en anonym och sÃ¤ker anslutning till <a href="http://forum.i2p2.de/">forum.i2p2.de</a></li>
          <li><a href="http://www.i2p2.i2p/">www.i2p2.i2p</a> en spegel <a href="http://i2p-projekt.i2p">i2p-projekt.i2p</a>:
-              säker och anonym anslutning till <a href="http://www.i2p2.de/">www.i2p2.de</a></li>
-         <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: en anonym sökmotor</li>
-         <li><a href="http://ugha.i2p/">ugha.i2p</a>: ugha's eepsida, en wiki som alla kan förändra, innehåller många länkar</li>
+              sÃ¤ker och anonym anslutning till <a href="http://www.i2p2.de/">www.i2p2.de</a></li>
+         <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: en anonym sÃ¶kmotor</li>
+         <li><a href="http://ugha.i2p/">ugha.i2p</a>: ugha's eepsida, en wiki som alla kan fÃ¶rÃ¤ndra, innehÃ¥ller mÃ¥nga lÃ¤nkar</li>
          <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: Freenet proxy</li>
      </ul>
-     Det finns många fler eepsidor - följ bara länkarna från dom du ser,
-     spara dina favoriter och besök dom ofta!</li>
- <li><b>surfa på nätet</b> - det finns för närvarande en "utproxy" i I2P som är ansluten
-     till din egen HTTP proxt på port 4444 - ställ helt enkelt in din webläsares proxy till
-     att använda den och gå till vilken vanlig URL osm helst - dina fröfrågningar kommer skickas
-     genom I2P nätverket.</li>
- <li><b>överföra filer</b> - det finns en integrerad <a href="i2psnark/">adaption</a> av
+     Det finns mÃ¥nga fler eepsidor - fÃ¶lj bara lÃ¤nkarna frÃ¥n dom du ser,
+     spara dina favoriter och besÃ¶k dom ofta!</li>
+ <li><b>surfa pÃ¥ nÃ¤tet</b> - det finns fÃ¶r nÃ¤rvarande en "utproxy" i I2P som Ã¤r ansluten
+     till din egen HTTP proxt pÃ¥ port 4444 - stÃ¤ll helt enkelt in din weblÃ¤sares proxy till
+     att anvÃ¤nda den och gÃ¥ till vilken vanlig URL osm helst - dina frÃ¶frÃ¥gningar kommer skickas
+     genom I2P nÃ¤tverket.</li>
+ <li><b>Ã¶verfÃ¶ra filer</b> - det finns en integrerad <a href="i2psnark/">adaption</a> av
      <a href="http://www.klomp.org/snark/">Snark</a> <a href="http://www.bittorrent.com/">BitTorrent</a>
      klienten.</li>
- <li><b>maila anonymt</b> - postman har skapat ett emailsystem som är fungerar med vanliga email-klienter
-     (POP3 / SMTP),som låter dig skicka email inom I2P så väl som till och från det vanliga Internet!
+ <li><b>maila anonymt</b> - postman har skapat ett emailsystem som Ã¤r fungerar med vanliga email-klienter
+     (POP3 / SMTP),som lÃ¥ter dig skicka email inom I2P sÃ¥ vÃ¤l som till och frÃ¥n det vanliga Internet!
      skaffa dig ett konto hos <a href="http://hq.postman.i2p/">hq.postman.i2p</a>.
      Vi skickar med <a href="/susimail/susimail">susimail</a>,
-     som är en webb-baserad anonymt inriktad pop3/smtp-klient, inställd till att ansluta till postmans email-tjänst.</li>
+     som Ã¤r en webb-baserad anonymt inriktad pop3/smtp-klient, instÃ¤lld till att ansluta till postmans email-tjÃ¤nst.</li>
  <li><b>chatta anonymt</b> - starta din IRC-klient och anslut till servern vid 
-     <b>localhost port 6668</b>.  Den pekar mot en av två anonyma IRC servrar,
-	men varken du eller dom vet var den andra är.</li>
- <li><b>bloga anonymt</b> - kika på <a href="http://syndie.i2p2.de/">Syndie</a></li>
+     <b>localhost port 6668</b>.  Den pekar mot en av tvÃ¥ anonyma IRC servrar,
+	men varken du eller dom vet var den andra Ã¤r.</li>
+ <li><b>bloga anonymt</b> - kika pÃ¥ <a href="http://syndie.i2p2.de/">Syndie</a></li>
  <li>och mycket mer</li>
 </ul>
 
 <h2>Vill du ha en egen eepsida?</h2>
 
-<p>Vi har skickat med mjukvara som låter dig driva en egen eepsida - en 
-<a href="http://jetty.mortbay.org/">Jetty</a> instans lyssnar på 
-<a href="http://localhost:7658/">http://localhost:7658/</a>.  Lägg helt enkelt dina filer i
+<p>Vi har skickat med mjukvara som lÃ¥ter dig driva en egen eepsida - en 
+<a href="http://jetty.mortbay.org/">Jetty</a> instans lyssnar pÃ¥ 
+<a href="http://localhost:7658/">http://localhost:7658/</a>.  LÃ¤gg helt enkelt dina filer i
 <code>eepsite/docroot/</code> mappen (eller standard JSP/Servlet <code>.war</code>
 filer i <code>eepsite/webapps</code>, eller standard CGI-script i <code>eepsite/cgi-bin</code>) 
-så kommer de synas.  När du startat en <a href="/i2ptunnel/">eepsite tunnel</a> som pekar på Jetty-server, så kommer sajten möjlig att nå för alla andra.
-Mer detaljerade instruktionr för att skapa en eepsite finns på 
-<a href="http://localhost:7658/">din tillfälliga eepsite</a>.
+sÃ¥ kommer de synas.  NÃ¤r du startat en <a href="/i2ptunnel/">eepsite tunnel</a> som pekar pÃ¥ Jetty-server, sÃ¥ kommer sajten mÃ¶jlig att nÃ¥ fÃ¶r alla andra.
+Mer detaljerade instruktionr fÃ¶r att skapa en eepsite finns pÃ¥ 
+<a href="http://localhost:7658/">din tillfÃ¤lliga eepsite</a>.
 </p>
 
 <h2><a name="trouble">Problem</a></h2>
 
-<p>Ha tålamod - I2P kan ta tid att starta första gången, medan den söker efter noder att ansluta till.
-Om, efter 30 minuter, Aktiva: anslutna/anslutna nyligen statistik visar mindre än 10 anslutna
-noder, bör du öppna port 8887 i din brandvägg.
-Om du inte lyckas besöka några eepsidor alls (inte ens <a href="http://www.i2p2.i2p/">www.i2p2.i2p</a>),
-försäkra dig om att din webbläsare är inställd till att avända en proxy, localhost på port 4444.
-Du kanska också vill kika på information på  
-<a href="http://www.i2p2.i2p/">I2Ps webbsida</a>, fråga frågor på  
-<a href="http://forum.i2p2.de/">I2P diskussions forumet</a>, eller kika förbi #i2p eller
-#i2p-chat på IRC vid <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.postman.i2p eller irc.freshcoffee.i2p (de är alla sammankopplade).</p>
+<p>Ha tÃ¥lamod - I2P kan ta tid att starta fÃ¶rsta gÃ¥ngen, medan den sÃ¶ker efter noder att ansluta till.
+Om, efter 30 minuter, "Aktiva: anslutna/anslutna nyligen" statistiken visar mindre Ã¤n 10 anslutna
+noder, bÃ¶r du Ã¶ppna port 8887 i din brandvÃ¤gg.
+Om du inte lyckas besÃ¶ka nÃ¥gra eepsidor alls (inte ens <a href="http://www.i2p2.i2p/">www.i2p2.i2p</a>),
+fÃ¶rsÃ¤kra dig om att din webblÃ¤sare Ã¤r instÃ¤lld till att avÃ¤nda en proxy, localhost pÃ¥ port 4444.
+Du kanska ocksÃ¥ vill kika pÃ¥ information pÃ¥  
+<a href="http://www.i2p2.i2p/">I2Ps webbsida</a>, frÃ¥ga frÃ¥gor pÃ¥  
+<a href="http://forum.i2p2.de/">I2P diskussions forumet</a>, eller kika fÃ¶rbi #i2p eller
+#i2p-chat pÃ¥ IRC vid <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.postman.i2p eller irc.freshcoffee.i2p (de Ã¤r alla sammankopplade).</p>
 
-<p><b>Du kan förändra denhär sidan genom att ändra i filen "docs/readme_sv.html"</b></p>
+<p><b>Du kan fÃ¶rÃ¤ndra denhÃ¤r sidan genom att Ã¤ndra i filen "docs/readme_sv.html"</b></p>
