Add some javadoc files
Monotone-Parent: 87809cc362d791180802568efd1abac8e6eba766
Monotone-Revision: bbdad169b766e682b576bf02792f618bda29757d

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-11-09T15:54:04
Monotone-Branch: i2p.i2p

--- a/router/java/src/net/i2p/router/transport/tcp/package.html
+++ b/router/java/src/net/i2p/router/transport/tcp/package.html
@@ -1,5 +1,8 @@
 <html><body>
-<p>Implements the transport for communicating with other routers via TCP/IP.</p>
+<p>
+OBSOLETE - see NTCP.
+Implements the transport for communicating with other routers via TCP/IP.
+</p>
 
 <h1>Connection protocol</h1>
 
