--- a/core/java/src/net/i2p/client/package.html
+++ b/core/java/src/net/i2p/client/package.html
@@ -15,7 +15,7 @@ receives asynchronous notification of network activity by providing an implement
 of {@link net.i2p.client.I2PSessionListener}. </p>
 
 <p>A simple example of how these base client classes can be used is the 
-{@link net.i2p.client.ATalk} application.  It isn't really useful, but it is 
+ATalk application.  It isn't really useful, but it is 
 heavily documented code.</p>
 
 <p>This client package provides the basic necessity for communicating over I2P,
