--- a/readme_sv.html
+++ b/readme_sv.html
@@ -1,61 +1,101 @@
-<p align=right><font size="-1"><a href="/index.jsp?lang=en">English</a> | <a href="/index.jsp?lang=de">Deutsch</a> | <a href="/index.jsp?lang=nl">Nederlands</a> | Svenska</font></p>
-<p>Om du just har startat I2P kommer de "Aktiva: #/#" börja öka inom några få minuter och du kommer se en destination kallad "delade klienter" på den vänstra listan (om inte <a href="#trouble">se nedan</a>). När de syns kan du:</p>
+<p align=right><font size="-1"><a href="/index.jsp?lang=en">English</a> 
+| <a href="/index.jsp?lang=de">Deutsch</a> | <a 
+href="/index.jsp?lang=nl">Nederlands</a> | Svenska</font></p>
+<p>Om du just har startat I2P kommer de "Aktiva: #/#" b&ouml;rja &ouml;ka inom 
+n&aring;gra f&aring; minuter och du kommer se en destination kallad "delade 
+klienter" p&aring; den v&auml;nstra listan (om inte <a href="#trouble">se 
+nedan</a>). N&auml;r de syns kan du:</p>
 <ul>
- <li><b>surfa på "eepsidor"</b> - inom I2P finns det anonyma sajter - 
-     ställ in din webbläsare till att använda <b>HTTP proxy vid localhost port 4444</b>, surfa sen till en eepsida - 
+ <li><b>surfa p&aring; "eepsidor"</b> - inom I2P finns det anonyma sajter - 
+     st&auml;ll in din webbl&auml;sare till att anv&auml;nda <b>HTTP proxy vid 
+localhost port 4444</b>, surfa sen till en eepsida - 
      <ul>
-         <li><a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a> och
-             <a href="http://perv.i2p/stats.cgi">perv.i2p</a>: för statistic över aktiva eepsidor</li>
-         <li><a href="http://forum.i2p/">forum.i2p</a>: en anonym och säker anslutning till <a href="http://forum.i2p2.de/">forum.i2p2.de</a></li>
-         <li><a href="http://www.i2p2.i2p/">www.i2p2.i2p</a> en spegel <a href="http://i2p-projekt.i2p">i2p-projekt.i2p</a>:
-              säker och anonym anslutning till <a href="http://www.i2p2.de/">www.i2p2.de</a></li>
-         <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: en anonym sökmotor</li>
-         <li><a href="http://ugha.i2p/">ugha.i2p</a>: ugha's eepsida, en wiki som alla kan förändra, innehåller många länkar</li>
-         <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: Freenet proxy</li>
+         <li><a 
+href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a> och
+             <a href="http://perv.i2p/stats.cgi">perv.i2p</a>: f&ouml;r 
+statistic &ouml;ver aktiva eepsidor</li>
+         <li><a href="http://forum.i2p/">forum.i2p</a>: en anonym och 
+s&auml;ker anslutning till <a 
+href="http://forum.i2p2.de/">forum.i2p2.de</a></li>
+         <li><a href="http://www.i2p2.i2p/">www.i2p2.i2p</a> en spegel 
+<a href="http://i2p-projekt.i2p">i2p-projekt.i2p</a>:
+              s&auml;ker och anonym anslutning till <a 
+href="http://www.i2p2.de/">www.i2p2.de</a></li>
+         <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: en anonym 
+s&ouml;kmotor</li>
+         <li><a href="http://ugha.i2p/">ugha.i2p</a>: ugha's eepsida, en 
+wiki som alla kan f&ouml;r&auml;ndra, inneh&aring;ller m&aring;nga l&auml;nkar</li>
+         <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: 
+Freenet proxy</li>
      </ul>
-     Det finns många fler eepsidor - följ bara länkarna från dom du ser,
-     spara dina favoriter och besök dom ofta!</li>
- <li><b>surfa på nätet</b> - det finns för närvarande en "utproxy" i I2P som är ansluten
-     till din egen HTTP proxt på port 4444 - ställ helt enkelt in din webläsares proxy till
-     att använda den och gå till vilken vanlig URL osm helst - dina fröfrågningar kommer skickas
-     genom I2P nätverket.</li>
- <li><b>överföra filer</b> - det finns en integrerad <a href="i2psnark/">adaption</a> av
-     <a href="http://www.klomp.org/snark/">Snark</a> <a href="http://www.bittorrent.com/">BitTorrent</a>
+     Det finns m&aring;nga fler eepsidor - f&ouml;lj bara l&auml;nkarna fr&aring;n dom du ser,
+     spara dina favoriter och bes&ouml;k dom ofta!</li>
+ <li><b>surfa p&aring; n&auml;tet</b> - det finns f&ouml;r n&auml;rvarande en "utproxy" i I2P 
+som &auml;r ansluten
+     till din egen HTTP proxt p&aring; port 4444 - st&auml;ll helt enkelt in din 
+webl&auml;sares proxy till
+     att anv&auml;nda den och g&aring; till vilken vanlig URL som helst - dina 
+fr&ouml;fr&aring;gningar kommer skickas
+     genom I2P n&auml;tverket.</li>
+ <li><b>&ouml;verf&ouml;ra filer</b> - det finns en integrerad <a 
+href="i2psnark/">adaption</a> av
+     <a href="http://www.klomp.org/snark/">Snark</a> <a 
+href="http://www.bittorrent.com/">BitTorrent</a>
      klienten.</li>
- <li><b>maila anonymt</b> - postman har skapat ett emailsystem som är fungerar med vanliga email-klienter
-     (POP3 / SMTP),som låter dig skicka email inom I2P så väl som till och från det vanliga Internet!
-     skaffa dig ett konto hos <a href="http://hq.postman.i2p/">hq.postman.i2p</a>.
+ <li><b>maila anonymt</b> - postman har skapat ett emailsystem som &auml;r 
+fungerar med vanliga email-klienter
+     (POP3 / SMTP),som l&aring;ter dig skicka email inom I2P s&aring; v&auml;l som till 
+och fr&aring;n det vanliga Internet!
+     skaffa dig ett konto hos <a 
+href="http://hq.postman.i2p/">hq.postman.i2p</a>.
      Vi skickar med <a href="/susimail/susimail">susimail</a>,
-     som är en webb-baserad anonymt inriktad pop3/smtp-klient, inställd till att ansluta till postmans email-tjänst.</li>
- <li><b>chatta anonymt</b> - starta din IRC-klient och anslut till servern vid 
-     <b>localhost port 6668</b>.  Den pekar mot en av två anonyma IRC servrar,
-	men varken du eller dom vet var den andra är.</li>
- <li><b>bloga anonymt</b> - kika på <a href="http://syndie.i2p2.de/">Syndie</a></li>
+     som &auml;r en webb-baserad anonymt inriktad pop3/smtp-klient, inst&auml;lld 
+till att ansluta till postmans email-tj&auml;nst.</li>
+ <li><b>chatta anonymt</b> - starta din IRC-klient och anslut till 
+servern vid 
+     <b>localhost port 6668</b>.  Den pekar mot en av tv&aring; anonyma IRC 
+servrar,
+	men varken du eller dom vet var den andra &auml;r.</li>
+ <li><b>bloga anonymt</b> - kika p&aring; <a 
+href="http://syndie.i2p2.de/">Syndie</a></li>
  <li>och mycket mer</li>
 </ul>
 
 <h2>Vill du ha en egen eepsida?</h2>
 
-<p>Vi har skickat med mjukvara som låter dig driva en egen eepsida - en 
-<a href="http://jetty.mortbay.org/">Jetty</a> instans lyssnar på 
-<a href="http://localhost:7658/">http://localhost:7658/</a>.  Lägg helt enkelt dina filer i
-<code>eepsite/docroot/</code> mappen (eller standard JSP/Servlet <code>.war</code>
-filer i <code>eepsite/webapps</code>, eller standard CGI-script i <code>eepsite/cgi-bin</code>) 
-så kommer de synas.  När du startat en <a href="/i2ptunnel/">eepsite tunnel</a> som pekar på Jetty-server, så kommer sajten möjlig att nå för alla andra.
-Mer detaljerade instruktionr för att skapa en eepsite finns på 
-<a href="http://localhost:7658/">din tillfälliga eepsite</a>.
+<p>Vi har skickat med mjukvara som l&aring;ter dig driva en egen eepsida - en 
+<a href="http://jetty.mortbay.org/">Jetty</a> instans lyssnar p&aring; 
+<a href="http://localhost:7658/">http://localhost:7658/</a>.  L&auml;gg helt 
+enkelt dina filer i
+<code>eepsite/docroot/</code> mappen (eller standard JSP/Servlet 
+<code>.war</code>
+filer i <code>eepsite/webapps</code>, eller standard CGI-script i 
+<code>eepsite/cgi-bin</code>) 
+s&aring; kommer de synas.  N&auml;r du startat en <a href="/i2ptunnel/">eepsite 
+tunnel</a> som pekar p&aring; Jetty-server, s&aring; kommer sajten m&ouml;jlig att n&aring; f&ouml;r 
+alla andra.
+Mer detaljerade instruktionr f&ouml;r att skapa en eepsite finns p&aring; 
+<a href="http://localhost:7658/">din tillf&auml;lliga eepsite</a>.
 </p>
 
 <h2><a name="trouble">Problem</a></h2>
 
-<p>Ha tålamod - I2P kan ta tid att starta första gången, medan den söker efter noder att ansluta till.
-Om, efter 30 minuter, "Aktiva: anslutna/anslutna nyligen" statistiken visar mindre än 10 anslutna
-noder, bör du öppna port 8887 i din brandvägg.
-Om du inte lyckas besöka några eepsidor alls (inte ens <a href="http://www.i2p2.i2p/">www.i2p2.i2p</a>),
-försäkra dig om att din webbläsare är inställd till att avända en proxy, localhost på port 4444.
-Du kanska också vill kika på information på  
-<a href="http://www.i2p2.i2p/">I2Ps webbsida</a>, fråga frågor på  
-<a href="http://forum.i2p2.de/">I2P diskussions forumet</a>, eller kika förbi #i2p eller
-#i2p-chat på IRC vid <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.postman.i2p eller irc.freshcoffee.i2p (de är alla sammankopplade).</p>
+<p>Ha t&aring;lamod - I2P kan ta tid att starta f&ouml;rsta g&aring;ngen, medan den s&ouml;ker 
+efter noder att ansluta till.
+Om, efter 30 minuter, "Aktiva: anslutna/anslutna nyligen" statistiken 
+visar mindre &auml;n 10 anslutna
+noder, b&ouml;r du &ouml;ppna port 8887 i din brandv&auml;gg.
+Om du inte lyckas bes&ouml;ka n&aring;gra eepsidor alls (inte ens <a 
+href="http://www.i2p2.i2p/">www.i2p2.i2p</a>),
+f&ouml;rs&auml;kra dig om att din webbl&auml;sare &auml;r inst&auml;lld till att av&auml;nda en proxy, 
+localhost p&aring; port 4444.
+Du kanska ocks&aring; vill kika p&aring; information p&aring;  
+<a href="http://www.i2p2.i2p/">I2Ps webbsida</a>, fr&aring;ga fr&aring;gor p&aring;  
+<a href="http://forum.i2p2.de/">I2P diskussions forumet</a>, eller kika 
+f&ouml;rbi #i2p eller
+#i2p-chat p&aring; IRC vid <a 
+href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.postman.i2p 
+eller irc.freshcoffee.i2p (de &auml;r alla sammankopplade).</p>
 
-<p><b>Du kan förändra denhär sidan genom att ändra i filen "docs/readme_sv.html"</b></p>
+<p><b>Du kan f&ouml;r&auml;ndra denh&auml;r sidan genom att &auml;ndra i filen 
+"docs/readme_sv.html"</b></p>
