--- a/readme_sv.html
+++ b/readme_sv.html
@@ -13,7 +13,7 @@ localhost port 4444</b>, surfa sen till en eepsida -
          <li><a 
 href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a> och
              <a href="http://perv.i2p/stats.cgi">perv.i2p</a>: f&ouml;r 
-statistic &ouml;ver aktiva eepsidor</li>
+statistik &ouml;ver aktiva eepsidor</li>
          <li><a href="http://forum.i2p/">forum.i2p</a>: en anonym och 
 s&auml;ker anslutning till <a 
 href="http://forum.i2p2.de/">forum.i2p2.de</a></li>
@@ -36,13 +36,13 @@ som &auml;r ansluten
 webl&auml;sares proxy till
      att anv&auml;nda den och g&aring; till vilken vanlig URL som helst - dina 
 fr&ouml;fr&aring;gningar kommer skickas
-     genom I2P n&auml;tverket.</li>
+     genom I2P ntverket.</li>
  <li><b>&ouml;verf&ouml;ra filer</b> - det finns en integrerad <a 
-href="i2psnark/">adaption</a> av
+href="i2psnark/">&ouml;vers&auml;tting</a> av
      <a href="http://www.klomp.org/snark/">Snark</a> <a 
 href="http://www.bittorrent.com/">BitTorrent</a>
      klienten.</li>
- <li><b>maila anonymt</b> - postman har skapat ett emailsystem som &auml;r 
+ <li><b>maila anonymt</b> - postman har skapat ett emailsystem som 
 fungerar med vanliga email-klienter
      (POP3 / SMTP),som l&aring;ter dig skicka email inom I2P s&aring; v&auml;l som till 
 och fr&aring;n det vanliga Internet!
@@ -56,7 +56,7 @@ servern vid
      <b>localhost port 6668</b>.  Den pekar mot en av tv&aring; anonyma IRC 
 servrar,
 	men varken du eller dom vet var den andra &auml;r.</li>
- <li><b>bloga anonymt</b> - kika p&aring; <a 
+ <li><b>blogga anonymt</b> - kika p&aring; <a 
 href="http://syndie.i2p2.de/">Syndie</a></li>
  <li>och mycket mer</li>
 </ul>
@@ -72,9 +72,9 @@ enkelt dina filer i
 filer i <code>eepsite/webapps</code>, eller standard CGI-script i 
 <code>eepsite/cgi-bin</code>) 
 s&aring; kommer de synas.  N&auml;r du startat en <a href="/i2ptunnel/">eepsite 
-tunnel</a> som pekar p&aring; Jetty-server, s&aring; kommer sajten m&ouml;jlig att n&aring; f&ouml;r 
+tunnel</a> som pekar p&aring; Jetty-server, s&aring; kommer sajten vara m&ouml;jlig att n&aring; f&ouml;r 
 alla andra.
-Mer detaljerade instruktionr f&ouml;r att skapa en eepsite finns p&aring; 
+Mer detaljerade instruktioner f&ouml;r att skapa en eepsite finns p&aring; 
 <a href="http://localhost:7658/">din tillf&auml;lliga eepsite</a>.
 </p>
 
@@ -89,11 +89,11 @@ Om du inte lyckas bes&ouml;ka n&aring;gra eepsidor alls (inte ens <a
 href="http://www.i2p2.i2p/">www.i2p2.i2p</a>),
 f&ouml;rs&auml;kra dig om att din webbl&auml;sare &auml;r inst&auml;lld till att av&auml;nda en proxy, 
 localhost p&aring; port 4444.
-Du kanska ocks&aring; vill kika p&aring; information p&aring;  
+Du kanske ocks&aring; vill kika p&aring; information p&aring;  
 <a href="http://www.i2p2.i2p/">I2Ps webbsida</a>, fr&aring;ga fr&aring;gor p&aring;  
 <a href="http://forum.i2p2.de/">I2P diskussions forumet</a>, eller kika 
 f&ouml;rbi #i2p eller
-#i2p-chat p&aring; IRC vid <a 
+#i2p-chat p&aring; IRC på <a 
 href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.postman.i2p 
 eller irc.freshcoffee.i2p (de &auml;r alla sammankopplade).</p>
 
