added echelon.i2p to readme of I2P router
Monotone-Parent: 91bd86329a458a5e064af7aa5abf3662aec61dab
Monotone-Revision: 4e3d0e106395f9bbb24c33d6a980c707831ad40e

Monotone-Author: amiga4000@mail.i2p
Monotone-Date: 2009-04-07T12:05:00
Monotone-Branch: i2p.i2p

--- a/readme_sv.html
+++ b/readme_sv.html
@@ -27,6 +27,7 @@ s&ouml;kmotor</li>
 wiki som alla kan f&ouml;r&auml;ndra, inneh&aring;ller m&aring;nga l&auml;nkar</li>
          <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: 
 Freenet proxy</li>
+	 <li><a href="http://echelon.i2p">echelon.i2p</a>: software archive and information for I2P</li>
      </ul>
      Det finns m&aring;nga fler eepsidor - f&ouml;lj bara l&auml;nkarna fr&aring;n dom du ser,
      spara dina favoriter och bes&ouml;k dom ofta!</li>
