--- a/readme_de.html
+++ b/readme_de.html
@@ -12,7 +12,8 @@
          <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: Eine anonym gehostete Suchseite f&uuml;r Eepsites</li>
          <li><a href="http://ugha.i2p/">ugha.i2p</a>: Ugha's Eepsite, ein &ouml;ffentliches Wiki mit vielen Links</li>
          <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: Freenet proxy</li>
-     </ul>
+	 <li><a href="http://echelon.i2p">echelon.i2p</a>: Software Archive und Informationen zu I2P</li>
+	</ul>
      Es gibt viel mehr Eepsites - folge einfach den Links die du findest,
      bookmarke Deine Favoriten und besuche sie oft!</li>
  <li><b>Im Internet surfen</b> - Es gibt einen HTTP "outproxy" in I2P in Deinem
