* Console - add readme_zh.html:       - Submitter (walking) reports encoding as GB2312, and tested on windows         with ff, IE6, chrome and opera. UTF-8 doesn't work. Still don't know why.
Monotone-Parent: 434849e8c56750908cfe6997158dd811317d8d53
Monotone-Revision: 4f0b8b8bb59f1a8e2181123c16c4099ea223e527

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-05-24T14:30:55

--- a/readme_nl.html
+++ b/readme_nl.html
@@ -1,4 +1,4 @@
-<p align=right><font size="-1"><a href="/index.jsp?lang=en">English</a> | <a href="/index.jsp?lang=de">Deutsch</a> | <a href="/index.jsp?lang=fr">Fran&ccedil;ais</a> | Nederlands | <a href="/index.jsp?lang=sv">Svenska</a></font></p>
+<p align=right><font size="-1"><a href="/index.jsp?lang=en">English</a> | <a href="/index.jsp?lang=zh">Chinese</a> | <a href="/index.jsp?lang=de">Deutsch</a> | <a href="/index.jsp?lang=fr">Fran&ccedil;ais</a> | Nederlands | <a href="/index.jsp?lang=sv">Svenska</a></font></p>
 <p>Als je net I2P opgestart hebt, zullen de 'Active:' (Actieve) getallen aan de linkerkant in de komende minuten stijgen, en je zal een "Shared clients" (Gedeelde clients) lokale bestemming zien staan aan de linkerkant (indien niet, <a href=#trouble>zie hieronder</a>). Eenmaal je deze bestemming ziet, kan je:</p>
 <ul>
  <li><b>surfen naar "eepsites"</b> - op I2P zijn er anonieme websites - stel je browser in om de <b>HTTP proxy op localhost, poort 4444</b> te gebruiken, en surf vervolgens naar een eepsite -
