--- a/readme_sv.html
+++ b/readme_sv.html
@@ -1,4 +1,4 @@
-<p align=right><font size="-1"><a href="/index.jsp?lang=en">English</a> 
+<p align=right><font size="-1"><a href="/index.jsp?lang=en">English</a> | <a href="/index.jsp?lang=zh">Chinese</a> 
 | <a href="/index.jsp?lang=de">Deutsch</a> | <a href="/index.jsp?lang=fr">Fran&ccedil;ais</a> | <a 
 href="/index.jsp?lang=nl">Nederlands</a> | Svenska</font></p>
 <p>Om du just har startat I2P kommer de "Aktiva: #/#" b&ouml;rja &ouml;ka inom 
