--- a/readme_fr.html
+++ b/readme_fr.html
@@ -1,4 +1,4 @@
-<p align=right><font size="-1"><a href="/index.jsp?lang=de">Deutsch</a> | <a href="/index.jsp?lang=en">English</a> | Fran&ccedil;ais | <a href="/index.jsp?lang=nl">Nederlands</a> | <a href="/index.jsp?lang=sv">Svenska</a></font></p>
+<p align=right><font size="-1"><a href="/index.jsp?lang=de">Deutsch</a> | <a href="/index.jsp?lang=zh">Chinese</a> | <a href="/index.jsp?lang=en">English</a> | Fran&ccedil;ais | <a href="/index.jsp?lang=nl">Nederlands</a> | <a href="/index.jsp?lang=sv">Svenska</a></font></p>
 <p>Si vous venez juste de lancer I2P, les chiffres sur la gauche &agrave; cot&eacute; de Active devraient commencer &agrave; augmenter dans les prochaines minutes et vous verrez un "Shared client" en destination locale list&eacute;s sur la gauche (si non, <a href=#trouble>voir plus bas</a>). Une fois qu'ils apparaissent, vous pouvez:</p>
 <ul>
  <li><b>parcourir les "eepsites"</b> - sur I2P il y a des sites web anonymes h&eacute;berg&eacute;s - dites &agrave; votre navigateur d'utiliser <b>le HTTP proxy a l'adresse localhost port 4444</b>, ensuite vous pouvez naviguer sur les eepsites.
