Add some alt tags to the flags on the readme.html (English only for now).
Monotone-Parent: 6e64ca6544771ae476de678623eccad8e50319eb
Monotone-Revision: 8b08f2cee6414933cccfc40ee8c61ba374722285

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-10T15:34:22
Monotone-Branch: i2p.i2p

--- a/readme.html
+++ b/readme.html
@@ -1,5 +1,5 @@
 <div align="right">
-<div class="langbox" align="right"><img src="/flags.jsp?c=us" title="English"> <a href="/index.jsp?lang=zh"><img src="/flags.jsp?c=cn" title="Chinese"></a> <a href="/index.jsp?lang=de"><img src="/flags.jsp?c=de" title="Deutsch"></a> <a href="/index.jsp?lang=fr" title="Fran&ccedil;ais"><img src="/flags.jsp?c=fr"></a> <a href="/index.jsp?lang=nl" title="Nederlands"><img src="/flags.jsp?c=nl"></a> <a href="/index.jsp?lang=sv" title="Svenska"><img src="/flags.jsp?c=se"></a></div>
+<div class="langbox" align="right"><img src="/flags.jsp?c=us" title="English" alt="English"> <a href="/index.jsp?lang=zh"><img src="/flags.jsp?c=cn" title="Chinese" alt="Chinese"></a> <a href="/index.jsp?lang=de"><img src="/flags.jsp?c=de" title="Deutsch" alt="Deutsch"></a> <a href="/index.jsp?lang=fr" title="Fran&ccedil;ais" alt="Fran&ccedil;ais"><img src="/flags.jsp?c=fr"></a> <a href="/index.jsp?lang=nl"><img src="/flags.jsp?c=nl" title="Nederlands" alt="Nederlands"></a> <a href="/index.jsp?lang=sv"><img src="/flags.jsp?c=se" title="Svenska" alt="Svenska"></a></div>
 </div>
 <div align=justify>
 <h2>Welcome to I2P!</h2>
