Let's add some flags to the various translations to the console homepage readme.
Monotone-Parent: 8b08f2cee6414933cccfc40ee8c61ba374722285
Monotone-Revision: 0ee22e2951863bae3073a2483071abe19bf8ff0d

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-10T21:17:53
Monotone-Branch: i2p.i2p

--- a/readme_nl.html
+++ b/readme_nl.html
@@ -1,4 +1,7 @@
-<p align=right><font size="-1"><a href="/index.jsp?lang=en">English</a> | <a href="/index.jsp?lang=zh">Chinese</a> | <a href="/index.jsp?lang=de">Deutsch</a> | <a href="/index.jsp?lang=fr">Fran&ccedil;ais</a> | Nederlands | <a href="/index.jsp?lang=sv">Svenska</a></font></p>
+<div align="right">
+<div class="langbox" align="right"><img src="/flags.jsp?c=us" title="English" alt="English"> <a href="/index.jsp?lang=zh"><img src="/flags.jsp?c=cn" title="Chinese" alt="Chinese"></a> <a href="/index.jsp?lang=de"><img src="/flags.jsp?c=de" title="Deutsch" alt="Deutsch"></a> <a href="/index.jsp?lang=fr" title="Fran&ccedil;ais" alt="Fran&ccedil;ais"><img src="/flags.jsp?c=fr"></a> <a href="/index.jsp?lang=nl"><img src="/flags.jsp?c=nl" title="Nederlands" alt="Nederlands"></a> <a href="/index.jsp?lang=sv"><img src="/flags.jsp?c=se" title="Svenska" alt="Svenska"></a></div>
+</div>
+<h2>Welkom bij I2P!</h2>
 <p>Als je net I2P opgestart hebt, zullen de 'Active:' (Actieve) getallen aan de linkerkant in de komende minuten stijgen, en je zal een "Shared clients" (Gedeelde clients) lokale bestemming zien staan aan de linkerkant (indien niet, <a href=#trouble>zie hieronder</a>). Eenmaal je deze bestemming ziet, kan je:</p>
 <ul>
  <li><b>surfen naar "eepsites"</b> - op I2P zijn er anonieme websites - stel je browser in om de <b>HTTP proxy op localhost, poort 4444</b> te gebruiken, en surf vervolgens naar een eepsite -
