--- a/readme_sv.html
+++ b/readme_sv.html
@@ -1,6 +1,7 @@
-<p align=right><font size="-1"><a href="/index.jsp?lang=en">English</a> | <a href="/index.jsp?lang=zh">Chinese</a> 
-| <a href="/index.jsp?lang=de">Deutsch</a> | <a href="/index.jsp?lang=fr">Fran&ccedil;ais</a> | <a 
-href="/index.jsp?lang=nl">Nederlands</a> | Svenska</font></p>
+<div align="right">
+<div class="langbox" align="right"><img src="/flags.jsp?c=us" title="English" alt="English"> <a href="/index.jsp?lang=zh"><img src="/flags.jsp?c=cn" title="Chinese" alt="Chinese"></a> <a href="/index.jsp?lang=de"><img src="/flags.jsp?c=de" title="Deutsch" alt="Deutsch"></a> <a href="/index.jsp?lang=fr" title="Fran&ccedil;ais" alt="Fran&ccedil;ais"><img src="/flags.jsp?c=fr"></a> <a href="/index.jsp?lang=nl"><img src="/flags.jsp?c=nl" title="Nederlands" alt="Nederlands"></a> <a href="/index.jsp?lang=sv"><img src="/flags.jsp?c=se" title="Svenska" alt="Svenska"></a></div>
+</div>
+<h2>Welcome to I2P!</h2>
 <p>Om du just har startat I2P kommer de "Aktiva: #/#" b&ouml;rja &ouml;ka inom 
 n&aring;gra f&aring; minuter och du kommer se en destination kallad "delade 
 klienter" p&aring; den v&auml;nstra listan (om inte <a href="#trouble">se 
