Mostly layout updates to the readme files.
Monotone-Parent: 6d4115c18543fe71ebe66c20aa4c515d2ea96a5d
Monotone-Revision: 77a06a05de5fbb4a4f4bbdbc6e59fd83db244644

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-14T00:40:44
Monotone-Branch: i2p.i2p

--- a/readme_sv.html
+++ b/readme_sv.html
@@ -1,5 +1,5 @@
 <div align="right">
-<div class="langbox" align="right"><img src="/flags.jsp?c=us" title="English" alt="English"> <a href="/index.jsp?lang=zh"><img src="/flags.jsp?c=cn" title="Chinese" alt="Chinese"></a> <a href="/index.jsp?lang=de"><img src="/flags.jsp?c=de" title="Deutsch" alt="Deutsch"></a> <a href="/index.jsp?lang=fr" title="Fran&ccedil;ais" alt="Fran&ccedil;ais"><img src="/flags.jsp?c=fr"></a> <a href="/index.jsp?lang=nl"><img src="/flags.jsp?c=nl" title="Nederlands" alt="Nederlands"></a> <a href="/index.jsp?lang=sv"><img src="/flags.jsp?c=se" title="Svenska" alt="Svenska"></a></div>
+<div class="langbox" align="right"><a href="/index.jsp?lang=en"><img src="/flags.jsp?c=us" title="English" alt="English"></a> <a href="/index.jsp?lang=zh"><img src="/flags.jsp?c=cn" title="Chinese" alt="Chinese"></a> <a href="/index.jsp?lang=de"><img src="/flags.jsp?c=de" title="Deutsch" alt="Deutsch"></a> <a href="/index.jsp?lang=fr" title="Fran&ccedil;ais" alt="Fran&ccedil;ais"><img src="/flags.jsp?c=fr"></a> <a href="/index.jsp?lang=nl"><img src="/flags.jsp?c=nl" title="Nederlands" alt="Nederlands"></a> <a href="/index.jsp?lang=sv"><img src="/flags.jsp?c=se" title="Svenska" alt="Svenska"></a></div>
 </div>
 <h2>Welcome to I2P!</h2>
 <p>Om du just har startat I2P kommer de "Aktiva: #/#" b&ouml;rja &ouml;ka inom 
@@ -9,8 +9,8 @@ nedan</a>). N&auml;r de syns kan du:</p>
 <ul>
  <li><b>surfa p&aring; "eepsidor"</b> - inom I2P finns det anonyma sajter - 
      st&auml;ll in din webbl&auml;sare till att anv&auml;nda <b>HTTP proxy vid 
-localhost port 4444</b>, surfa sen till en eepsida - 
-     <ul>
+localhost port 4444</b>, surfa sen till en eepsida:<br /> 
+     <ul class="links">
          <li><a 
 href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a> och
              <a href="http://perv.i2p/stats.cgi">perv.i2p</a>: f&ouml;r 
@@ -29,9 +29,9 @@ wiki som alla kan f&ouml;r&auml;ndra, inneh&aring;ller m&aring;nga l&auml;nkar</
          <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: 
 Freenet proxy</li>
 	 <li><a href="http://echelon.i2p">echelon.i2p</a>: software archive and information for I2P</li>
-     </ul>
+     </ul><br />
      Det finns m&aring;nga fler eepsidor - f&ouml;lj bara l&auml;nkarna fr&aring;n dom du ser,
-     spara dina favoriter och bes&ouml;k dom ofta!</li>
+     spara dina favoriter och bes&ouml;k dom ofta!</li><br />
  <li><b>surfa p&aring; n&auml;tet</b> - det finns f&ouml;r n&auml;rvarande en "utproxy" i I2P 
 som &auml;r ansluten
      till din egen HTTP proxt p&aring; port 4444 - st&auml;ll helt enkelt in din 
@@ -97,4 +97,4 @@ Du kanske ocks&aring; vill kika p&aring; information p&aring;
 f&ouml;rbi #i2p eller
 #i2p-chat p&aring; IRC på <a 
 href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.postman.i2p 
-eller irc.freshcoffee.i2p (de &auml;r alla sammankopplade).</p>
+eller irc.freshcoffee.i2p (de &auml;r alla sammankopplade).</p><hr />
