--- a/readme.html
+++ b/readme.html
@@ -16,21 +16,21 @@
     - tell your browser to use the <b>HTTP proxy at localhost port 4444</b>, then 
     browse to an eepsite:<br />
     <ul class="links">
-      <li class="tidylist"><a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a> 
+      <li><a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a> 
         and <a href="http://perv.i2p/stats.cgi">perv.i2p</a>: sites tracking active 
         eepsites</li>
-      <li class="tidylist"><a href="http://forum.i2p/">forum.i2p</a>: a secure 
+      <li><a href="http://forum.i2p/">forum.i2p</a>: a secure 
         and anonymous connection to <a href="http://forum.i2p2.de/">forum.i2p2.de</a></li>
-      <li class="tidylist"><a href="http://www.i2p2.i2p/">www.i2p2.i2p</a> and 
+      <li><a href="http://www.i2p2.i2p/">www.i2p2.i2p</a> and 
         mirror <a href="http://i2p-projekt.i2p">i2p-projekt.i2p</a>: secure and 
         anonymous connections to <a href="http://www.i2p2.de/">www.i2p2.de</a></li>
-      <li class="tidylist"><a href="http://eepsites.i2p/">eepsites.i2p</a>: an 
+      <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: an 
         anonymously hosted search engine of eepsites</li>
-      <li class="tidylist"><a href="http://ugha.i2p/">ugha.i2p</a>: ugha's eepsite, 
+      <li><a href="http://ugha.i2p/">ugha.i2p</a>: ugha's eepsite, 
         a wiki that anyone can edit, and lots of links</li>
-      <li class="tidylist"><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: 
+      <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: 
         Freenet proxy</li>
-      <li class="tidylist"><a href="http://echelon.i2p">echelon.i2p</a>: software 
+      <li><a href="http://echelon.i2p">echelon.i2p</a>: software 
         archive and information for I2P</li>
       <p></p>
       There are many more eepsites - just follow the links from the ones you see, 
