Apply some css love to the light theme I2P tunnel dropdowns. Insert flags into Chinese readme.
Monotone-Parent: 85f6139fdf97a8859942e2af6f6a1d91778219e7
Monotone-Revision: b2d6ee283b2d2ce0c13625e2a30add548ab3f845

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-16T17:16:32
Monotone-Branch: i2p.i2p

--- a/readme_zh.html
+++ b/readme_zh.html
@@ -1,4 +1,11 @@
-<p align=right><font size="-1"><a href="/index.jsp?lang=en">English</a> | <a href="/index.jsp?lang=de">Deutsch</a> | <a href="/index.jsp?lang=fr">Fran&#231;ais</a> | <a href="/index.jsp?lang=nl">Nederlands</a> | <a href="/index.jsp?lang=sv">Svenska</a></font></p>
+<div align="right"> 
+  <div class="langbox" align="right"><a href="/index.jsp?lang=en"><img src="/flags.jsp?c=us" title="English" alt="English"></a> 
+    <a href="/index.jsp?lang=zh"><img src="/flags.jsp?c=cn" title="Chinese" alt="Chinese"></a> 
+    <a href="/index.jsp?lang=de"><img src="/flags.jsp?c=de" title="Deutsch" alt="Deutsch"></a> 
+    <a href="/index.jsp?lang=fr" title="Fran&ccedil;ais" alt="Fran&ccedil;ais"><img src="/flags.jsp?c=fr"></a> 
+    <a href="/index.jsp?lang=nl"><img src="/flags.jsp?c=nl" title="Nederlands" alt="Nederlands"></a> 
+    <a href="/index.jsp?lang=sv"><img src="/flags.jsp?c=se" title="Svenska" alt="Svenska"></a></div>
+</div>
 <p>如果 I2P 已经运行，未来的几分钟里控制台左侧的活动节点(Active)数量将开始增长，并会出现名为 &quot;已共享客户&quot;(&quot;shared clients&quot;) 的本地目标。(如果没有,请见 <a href="#trouble">疑难解答</a>)。待出现以上消息后，您可以:</p>
 <ul>
  <li><B>浏览 IIP网站 &quot;eepsites&quot;</B> -  I2P 网络内匿名运行的站点 - 您要首先设置浏览器的 <B>HTTP 代理</B> 为 localhost:4444 然后才能浏览IIP站点 - <ul>
