--- a/readme_zh.html
+++ b/readme_zh.html
@@ -6,6 +6,7 @@
     <a href="/index.jsp?lang=nl"><img src="/flags.jsp?c=nl" title="Nederlands" alt="Nederlands"></a> 
     <a href="/index.jsp?lang=sv"><img src="/flags.jsp?c=se" title="Svenska" alt="Svenska"></a></div>
 </div>
+<h2>Welcome to I2P!</h2>
 <p>如果 I2P 已经运行，未来的几分钟里控制台左侧的活动节点(Active)数量将开始增长，并会出现名为 &quot;已共享客户&quot;(&quot;shared clients&quot;) 的本地目标。(如果没有,请见 <a href="#trouble">疑难解答</a>)。待出现以上消息后，您可以:</p>
 <ul>
  <li><B>浏览 IIP网站 &quot;eepsites&quot;</B> -  I2P 网络内匿名运行的站点 - 您要首先设置浏览器的 <B>HTTP 代理</B> 为 localhost:4444 然后才能浏览IIP站点 - <ul>
