Add some newlines to the Chinese readme to enhance legibility.
Monotone-Parent: 41423b391bf4327fe9df3a99934fafd2e6175f7b
Monotone-Revision: 397260cc070fae2a4f82ad7409cd63eb8df42ae5

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-16T19:06:47
Monotone-Branch: i2p.i2p

--- a/readme_zh.html
+++ b/readme_zh.html
@@ -16,7 +16,8 @@
          <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: 匿名建立的IIP网站搜索引擎</li>
          <li><a href="http://ugha.i2p/">ugha.i2p</a>: UGHA 的IIP站点, 任何人都可以编辑的WIKI, 有丰富的链接</li>
          <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: FREENET 代理</li>
-     </ul> I2P网络中还有很多其他的IIP网站(EEPSITE) - 访问上面的网站你会找到更多，收藏你喜爱的 IIP 网站，别忘了常去看看！</li>
+     </ul> <br>
+      I2P网络中还有很多其他的IIP网站(EEPSITE) - 访问上面的网站你会找到更多，收藏你喜爱的 IIP 网站，别忘了常去看看！</li><br>
  <li><B>浏览 Web 网页</B> - 目前 IP2 网络中只有一个 HTTP 出口代理(&quot;outproxy&quot;)挂接在你主机4444端口的HTTP代理上。- 只要将浏览器的代理设置指向为前面的地址(localhost:4444)，然后访问任何普通链接即可 - 您的HTTP请求将在 I2P 网络内部传递。</li>
  <li><B>文件交换</B> - 本机的其中一个内置 <a href="i2psnark/">端口</a> 中提供 <a href="http://www.klomp.org/snark/">Snark</a> <a href="http://www.bittorrent.com/">BitTorrent</a> 客户端。</li>
  <li><B>匿名电邮</B> - POSTMAN 创建了兼容普通邮件客户端 (POP3 / SMTP)的邮件系统，该系统可以在 I2P 网络内部收发Email 也可以收发来自外部 Internet 的邮件！电邮账号请到 <a href="http://hq.postman.i2p/">hq.postman.i2p</a> 申请。我们将用于匿名POP3/SMTP的Web邮件客户端 <a href="/susimail/susimail">SUSIMail</a>, 集成在I2P中，并将其配置为使用POSTMAN 的邮件服务。</li>
