Intitial proxy error tweaks, readme alt tag fixology. <b>(Blame the French!)</b>
Monotone-Parent: 4c475d2f20b45b76b9cbb569c112ce3424f5b68a
Monotone-Revision: 940d591debe327fb7e2cb06405ce1fd3fef1f49d

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-18T21:27:57
Monotone-Branch: i2p.i2p

--- a/readme.html
+++ b/readme.html
@@ -2,7 +2,7 @@
   <div class="langbox" align="right"><a href="/index.jsp?lang=en"><img src="/flags.jsp?c=us" title="English" alt="English"></a> 
     <a href="/index.jsp?lang=zh"><img src="/flags.jsp?c=cn" title="Chinese" alt="Chinese"></a> 
     <a href="/index.jsp?lang=de"><img src="/flags.jsp?c=de" title="Deutsch" alt="Deutsch"></a> 
-    <a href="/index.jsp?lang=fr" title="Fran&ccedil;ais" alt="Fran&ccedil;ais"><img src="/flags.jsp?c=fr"></a> 
+    <a href="/index.jsp?lang=fr"><img src="/flags.jsp?c=fr" title="Fran&ccedil;ais" alt="Fran&ccedil;ais"></a> 
     <a href="/index.jsp?lang=nl"><img src="/flags.jsp?c=nl" title="Nederlands" alt="Nederlands"></a> 
     <a href="/index.jsp?lang=sv"><img src="/flags.jsp?c=se" title="Svenska" alt="Svenska"></a></div>
 </div>
