* Eepsite: Add Deutsch index page and css (thanks sperrbezirk!)
Monotone-Parent: 22e128e61010af7553f98f906bd0df3fb2ccc584
Monotone-Revision: 2e07e73dcae7089039e7fffa85fba2aa4a3e9d4c

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-07-24T14:16:16
Monotone-Branch: i2p.i2p

--- a/installer/resources/eepsite_index.html
+++ b/installer/resources/eepsite_index.html
@@ -2,10 +2,11 @@
  <head>
   <title>Welcome to your eepsite</title>
   <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="eepsite.css" />
  </head>
  <body>
  <h1>Welcome to your eepsite</h1>
-
+<p>(<a href="index_de.html">Deutsch</a>)</p>
  <p>This is your eepsite - simply edit the files under ./eepsite/docroot/ 
  and they'll be reachable by others once you follow the instructions below.
  In I2P, eepsites are addressed using a 'key', which is represented as a really long Base64 string.
